--- a/BootstrapWithAnimation-master/index.html
+++ b/BootstrapWithAnimation-master/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>The beauty in Viet Nam</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,7 +24,7 @@
 	</audio>
 	<section class="header">
 		<nav class="navbar navbar-expand-lg navbar-light " id="navBarTarget">
-		  <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
+		  <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
 		  <button class="navbar-toggler no-border" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 			<i class="fa fa-bars"></i>	
 		  </button>
@@ -54,7 +54,7 @@
 				<li><i class="fa fa-pinterest"></i></li>
 				<li>
 					<div class="input-group mb-3">
-  						<input type="text" class="form-control" placeholder="Search">
+  						<input id="form" type="text" class="form-control" placeholder="Search">
 						<div class="input-group-append">
 					    	<span class="input-group-text" ><i class="fa fa-search"></i></span>
 						</div>
@@ -65,7 +65,7 @@
 		</nav>
 		<div class="banner">
 			<div class="banner-img">
-				<img src="images/banner.jpg">
+				<img src="images/banner.jpg" alt="banner image">
 			</div>
 			<div class="banner-title">
 				<h1>AO DAI</h1>
@@ -184,11 +184,11 @@
 						</div>						
     				</div>
     				<a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
-						<span><img src="images/previous.png"></span>
+						<span><img src="images/previous.png" alt="go back"></span>
 						<span class="sr-only">Previous</span>
     				</a>
     				<a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
-						<span><img src="images/next.png"></span>
+						<span><img src="images/next.png" alt="go next"></span>
 						<span class="sr-only">Next</span>
 					</a>
 				</div>
