--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<link rel="shortcut icon" href="images/favicon-16x16.png" type="image/png" />
 	<!--  -->
-	<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+	
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 </head>
@@ -23,46 +24,31 @@
 		No audio found!
 	</audio>
 	<section class="header">
-		<nav class="navbar navbar-expand-lg navbar-light " id="navBarTarget">
-		  <a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo"></a>
-		  <button class="navbar-toggler no-border" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-			<i class="fa fa-bars"></i>	
-		  </button>
-		  <!-- <script>
-			  function toggleDrawer() {
-				  toggle = document.getElementById('drawer');
-				  toggle.toggleAttribute('aria-expanded');
-			  }
-		  </script> -->
-		  <div class="collapse navbar-collapse">
-		    <ul class="navbar-nav">
-		      <li class="nav-item">
-		        <a class="nav-link" href="#classic">CLASSIC</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#high-school">HIGH SCHOOL</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#artworks">ARTWORKS</a>
-		      </li>
-		    </ul>
-		    <!-- if we want to put the ul on the right then use ml-auto -->
-		    <ul class="right-menu ml-auto">
+		<nav class="navbar navbar-expand-lg navbar-light bg-white" id="navBarTarget">
+			<a class="navbar-brand" href="#"><img src="images/logo.png" alt="Logo" style="margin-top:-1vh"></a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			  <ul class="navbar-nav mr-auto">
+				<li class="nav-item">
+					<a class="nav-link" href="#classic">CLASSIC <span class="sr-only">(current)</span></a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#high-school">HIGH SCHOOL</a>
+				</li>
+				<li class="nav-item dropdown">
+					<a class="nav-link" href="#artworks">ARTWORKS</a>
+				</li>
+			  </ul>
+			  <ul class="right-menu ml-auto">
 				<li><i class="fa fa-music" id="music-icon"></i></li>
-		    	<li><i class="fa fa-facebook"></i></li>
-				<li><i class="fa fa-instagram"></i></li>
-				<li><i class="fa fa-pinterest"></i></li>
-				<!-- <li>
-					<div class="input-group mb-3">
-  						<input id="form" type="text" class="form-control" placeholder="Search">
-						<div class="input-group-append">
-					    	<span class="input-group-text" ><i class="fa fa-search"></i></span>
-						</div>
-					</div>
-				</li> -->
+		    	<li><a href="https://www.facebook.com/Giadinhcahat" target="_blank"><i class="fa fa-facebook"></i></a></li>
+				<li><a href="https://www.instagram.com/explore/tags/aodai/"><i class="fa fa-instagram"></i></a></li>
+				<li><a href="https://www.pinterest.com/fleetingsky/ao-dai/"><i class="fa fa-pinterest"></i></a></li>
 		    </ul>
-		  </div>
-		</nav>
+			</div>
+		  </nav>
 		<div class="banner">
 			<div class="banner-img">
 				<img src="images/banner.jpg" alt="banner image">
@@ -77,8 +63,11 @@
 					</p>
 				</div>
 			</div>
-
 		</div>	
+		<div class="banner-title-responsive">
+			<h1>AO DAI</h1>
+				<h2>UNIQUE BEAUTY OF VIETNAMESE WOMEN</h2>
+		</div>
 	</section>
 	<!-- Traditional ao dai showcase -->
 	<div class="ao-dai-style text-center" id="classic">
@@ -301,7 +290,6 @@
 	<!-- Scripts -->
 	<script src="musicscript.js"></script>
 	<script src="modalscript.js"></script>
-	<script src="articleText.js"></script>
 
 </body>
 </html>
