--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 			  <ul class="right-menu ml-auto">
 				<li><i class="fa fa-music" id="music-icon"></i></li>
 		    	<li><a href="https://www.facebook.com/Giadinhcahat" target="_blank"><i class="fa fa-facebook"></i></a></li>
-				<li><a href="https://www.instagram.com/explore/tags/aodai/"><i class="fa fa-instagram"></i></a></li>
-				<li><a href="https://www.pinterest.com/fleetingsky/ao-dai/"><i class="fa fa-pinterest"></i></a></li>
+				<li><a href="https://www.instagram.com/explore/tags/aodai/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+				<li><a href="https://www.pinterest.com/fleetingsky/ao-dai/" target="_blank"><i class="fa fa-pinterest"></i></a></li>
 		    </ul>
 			</div>
 		  </nav>
